--- a/package.json
+++ b/package.json
@@ -4,20 +4,22 @@
   "main": "expo-router/entry",
   "scripts": {
     "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
     "web": "expo start --web"
   },
   "dependencies": {
     "expo": "~52.0.38",
+    "expo-constants": "~17.0.8",
+    "expo-linking": "~7.0.5",
+    "expo-router": "~4.0.19",
     "expo-status-bar": "~2.0.1",
     "react": "18.3.1",
     "react-native": "0.76.7",
-    "expo-router": "~4.0.19",
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.4.0",
-    "expo-linking": "~7.0.5",
-    "expo-constants": "~17.0.8"
+    "react-native-vision-camera": "^4.6.4",
+    "expo-dev-client": "~5.0.14"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
