--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "expo": "~52.0.38",
     "expo-constants": "~17.0.8",
+    "expo-dev-client": "~5.0.14",
     "expo-linking": "~7.0.5",
     "expo-router": "~4.0.19",
     "expo-status-bar": "~2.0.1",
@@ -18,8 +19,7 @@
     "react-native": "0.76.7",
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.4.0",
-    "react-native-vision-camera": "^4.6.4",
-    "expo-dev-client": "~5.0.14"
+    "react-native-vision-camera": "^4.6.4"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
